--- a/NASA.ipynb
+++ b/NASA.ipynb
@@ -816,7 +816,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe2=dataframe2.drop(columns=['Group','Year','Space Flights','Space Flight (hr)','Space Walks','Space Walks (hr)','Space Flights R'])"
+    "dataframe2=dataframe2.drop(columns=['Group','Year','Space Flights','Space Flight (hr)','Space Walks','Space Walks (hr)'])"
    ]
   },
   {
