include more code

--- a/NASA.ipynb
+++ b/NASA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3da32205",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c376b457",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6ba85f55",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "4        2009-06-29  25.440110  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e90f0867-3520-4cea-a56c-1133258739e2",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3969cb94-b82d-4138-a900-20e06ec83117",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
        "4                               Gemini 12, Apollo 11        NaN           NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "81ebd3c7-513d-4c06-be35-e54c7ec9cdbb",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
        "4                                  0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0971a6af-7cb0-44cb-b640-287796e4b112",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e107e5ab-57e1-4105-b4d1-ab91d15f4caf",
    "metadata": {},
    "outputs": [],
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1c71f0c0-2ab3-487a-adf1-04d2a40b6175",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        "4                1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "75169036-37f4-4714-ab77-78c8d6d2c22f",
    "metadata": {},
    "outputs": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d6713686-607b-4fd1-a052-dd71cd8f8b72",
    "metadata": {},
    "outputs": [],
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e41d74e1-4ba8-4b35-829f-e031302d41cc",
    "metadata": {},
    "outputs": [],
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f5c8fc3d",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,7 @@
        "4                1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "75b4ba0f",
    "metadata": {},
    "outputs": [],
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "5fa2967c",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1288,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9ef675a1-319d-48d8-a867-90ea2b0891e3",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1314,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "3d4c6d92-17df-4d3f-9a8c-e64db6a61967",
    "metadata": {},
    "outputs": [],
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "3c7e18bb-691d-4e34-9fed-5da33376551e",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1372,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>NASA</th>\n",
-       "      <th>Military</th>\n",
        "      <th>Gender</th>\n",
        "      <th>Name</th>\n",
        "      <th>Missions</th>\n",
@@ -1384,7 +1383,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>No</td>\n",
-       "      <td>No</td>\n",
        "      <td>Male</td>\n",
        "      <td>Joseph M. Acaba</td>\n",
        "      <td>STS-119 (Discovery), ISS-31/32 (Soyuz)</td>\n",
@@ -1393,7 +1391,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>Male</td>\n",
        "      <td>Loren W. Acton</td>\n",
@@ -1404,7 +1401,6 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>No</td>\n",
-       "      <td>No</td>\n",
        "      <td>Male</td>\n",
        "      <td>James C. Adamson</td>\n",
        "      <td>STS-28 (Columbia), STS-43 (Atlantis)</td>\n",
@@ -1414,7 +1410,6 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>No</td>\n",
-       "      <td>No</td>\n",
        "      <td>Male</td>\n",
        "      <td>Thomas D. Akers</td>\n",
        "      <td>STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...</td>\n",
@@ -1423,7 +1418,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>Male</td>\n",
        "      <td>Buzz Aldrin</td>\n",
@@ -1436,12 +1430,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  NASA Military Gender              Name  \\\n",
-       "0   No       No   Male   Joseph M. Acaba   \n",
-       "1   No       No   Male    Loren W. Acton   \n",
-       "2   No       No   Male  James C. Adamson   \n",
-       "3   No       No   Male   Thomas D. Akers   \n",
-       "4   No       No   Male       Buzz Aldrin   \n",
+       "  NASA Gender              Name  \\\n",
+       "0   No   Male   Joseph M. Acaba   \n",
+       "1   No   Male    Loren W. Acton   \n",
+       "2   No   Male  James C. Adamson   \n",
+       "3   No   Male   Thomas D. Akers   \n",
+       "4   No   Male       Buzz Aldrin   \n",
        "\n",
        "                                            Missions  Space Flights R  GenderR  \n",
        "0             STS-119 (Discovery), ISS-31/32 (Soyuz)                1        1  \n",
@@ -1451,7 +1445,7 @@
        "4                               Gemini 12, Apollo 11                1        1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "a774e08a",
    "metadata": {},
    "outputs": [
@@ -1478,7 +1472,6 @@
      "data": {
       "text/plain": [
        "NASA                   0\n",
-       "Military               0\n",
        "Gender                 0\n",
        "Name                   0\n",
        "Missions           44709\n",
@@ -1487,7 +1480,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1498,17 +1491,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "69778a4e-8b03-4fd3-971a-ffd08fc84b54",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7faa5d19be80>"
+       "<seaborn.axisgrid.PairGrid at 0x7f98adb7e550>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1531,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "40b319da-5cbf-495a-91e9-16f0457ac71b",
    "metadata": {},
    "outputs": [],
@@ -1540,9 +1533,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9c03cb2-8ff7-4196-9e36-36c02b5c86d8",
+   "metadata": {},
+   "source": [
+    "## Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87f7bf59-c1b7-43f4-9980-0636d1d24026",
+   "metadata": {},
+   "source": [
+    "### t tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "bc6ad0d1-e465-4da3-9303-60be3685b892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import norm\n",
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "dfa5dafb-8e33-4795-83f5-3f9d95346d77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-170.87029923589571, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_1samp(NasaData['GenderR'],1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d7cf3f6-15b0-4aed-ac9e-f9bcb6ab7cf0",
+   "metadata": {},
+   "source": [
+    "### this is significant as p < .05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "487e1604-edd2-40e9-914b-fcb4185c1055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a6eeef5-0bca-40b0-ba6c-960a6bf88bce",
+   "metadata": {},
+   "source": [
+    "## correlation matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2b73a89a-9dca-4df6-b748-c7e3221496f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_06191_row0_col0, #T_06191_row1_col1 {\n",
+       "  background-color: #b40426;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "#T_06191_row0_col1, #T_06191_row1_col0 {\n",
+       "  background-color: #3b4cc0;\n",
+       "  color: #f1f1f1;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_06191_\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th class=\"col_heading level0 col0\" >Space Flights R</th>\n",
+       "      <th class=\"col_heading level0 col1\" >GenderR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_06191_level0_row0\" class=\"row_heading level0 row0\" >Space Flights R</th>\n",
+       "      <td id=\"T_06191_row0_col0\" class=\"data row0 col0\" >1.0</td>\n",
+       "      <td id=\"T_06191_row0_col1\" class=\"data row0 col1\" >0.015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_06191_level0_row1\" class=\"row_heading level0 row1\" >GenderR</th>\n",
+       "      <td id=\"T_06191_row1_col0\" class=\"data row1 col0\" >0.015</td>\n",
+       "      <td id=\"T_06191_row1_col1\" class=\"data row1 col1\" >1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f98ad0ea700>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NasaData.corr(method='pearson').style.format(\"{:.2}\").background_gradient(cmap=plt.get_cmap('coolwarm'), axis=1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6ad0d1-e465-4da3-9303-60be3685b892",
+   "id": "2facd57c-33cb-4d54-9cea-31677e2edcfd",
    "metadata": {},
    "outputs": [],
    "source": []
