--- a/Notebooks/NASA_PROGRAM (4).ipynb
+++ b/Notebooks/NASA_PROGRAM (4).ipynb
@@ -1967,12 +1967,7 @@
     }
    ],
    "source": [
-    "# Single Sample t-test for Males\n",
-    "import scipy.stats as stats\n",
-    "#perform one sample t-test\n",
-    "stats.ttest_1samp(a=dataframe['Males Accepted in NASA Program '], popmean=50)\n",
-    "\n",
-    "\n"
+    "stats.ttest_1samp(a=dataframe['Males Accepted in NASA Program '], popmean=50)"
    ]
   },
   {
@@ -2009,10 +2004,7 @@
     }
    ],
    "source": [
-    "# Single Sample t-test for Females\n",
-    "import scipy.stats as stats\n",
-    "#perform one sample t-test\n",
-    "stats.ttest_1samp(a=dataframe['Females Accepted in NASA Program '], popmean=50)\n"
+    "stats.ttest_1samp(a=dataframe['Females Accepted in NASA Program '], popmean=50)"
    ]
   },
   {
@@ -2049,10 +2041,7 @@
    ],
    "source": [
     "#Independent T-Test\n",
-    "from scipy import stats\n",
-    "from scipy.stats import ttest_ind\n",
-    "ttest_ind(dataframe['Females Accepted in NASA Program ']\n",
-    ", dataframe['Males Accepted in NASA Program '])"
+    "ttest_ind(dataframe['Females Accepted in NASA Program '], dataframe['Males Accepted in NASA Program '])"
    ]
   },
   {
